...
                text = product.price.plus(" €"),
                fontSize = 14.sp,
                fontWeight = FontWeight.SemiBold
            )
            Button(
                modifier = Modifier.weight(1F)
                    .semantics { testTagsAsResourceId = true }.testTag("Add"),
                onClick = { onAddClicked() },
                colors = ButtonDefaults.buttonColors(containerColor = Purple80)
            ) {
                Text(text = "Add", color = Purple40, fontWeight = FontWeight.Bold)
            }
        }
...
