...
            )
        },
        actions = {
            IconButton(
                modifier = Modifier
                    .semantics { testTagsAsResourceId = true }
                    .testTag("cartButton"),
                onClick = { onCartClicked() }
            ){
                Box(
                    modifier = Modifier
                    .wrapContentSize()
                    .align(Alignment.CenterVertically),
...
